--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -32,11 +32,11 @@
 
 <div id="lastColumn">
 
-  Address
+  <div class="head2"> Address</div>
 
   Post Box  No: 709, East Fort, Thrissur, Kerala, India 680005
 
-
+  <div class="head2"> Face Book</div>
   <!-- Facebook Badge START <a href="https://www.facebook.com/klairvoyant.info" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Klairvoyant Infosolutions">Klairvoyant Infosolutions</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;|&nbsp;</span><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Make your own badge!">Promote Your Page Too</a><br/><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
 
   <div class="fb-like-box" data-href="https://www.facebook.com/klairvoyant.info" data-width="292" data-show-faces="true" data-stream="true" data-header="true"></div>
