--- a/app/views/welcome/design.html.erb
+++ b/app/views/welcome/design.html.erb
@@ -14,6 +14,9 @@
 </div>
 <div id="firstColumn">
 
+  <div class="head1"> Web Development</div>
+
+  <div class="para">
   We provide solutions to Website Design,Website Creation, and Web Master Services.
 
 
@@ -35,6 +38,7 @@
   Web Master Services
 
   Main responsibility is maintaining the websites. services include replying to user comments,examining traffic through the site, "CPanel" Services like file uploadings, site modifications, Providing FTP file access  etc.. we also  provide Google webmaster tools service like Google Analytics, Google AdSense and Google Apps.
+    </div>
 
   <script type="text/javascript"><!--
   google_ad_client = "ca-pub-1582243133898514";
@@ -52,25 +56,21 @@
 
 <div id="lastColumn">
 
-  <p> Services </p>
 
 
-  ruby on rails
-  Graphic design
-  internet marketing
+  <div class="head2"> portfolio</div>
 
-  -----------------------------------
+  portfolio  pictures
 
-  portfolio
+  <div class="head2"> Web development Tips</div>
 
 
-  pictures
-
-  --------------------
-
-  web development blog
-
+  <!--<script src="http://feeds.feedburner.com/blogspot/GAHiE?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/GAHiE"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/blogspot/GAHiE?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/GAHiE"></a><br/>Powered by FeedBurner</p> </noscript>
+
+  <div class="head2"> Google Map API Tips</div>
+
+  <!--<script src="http://feeds.feedburner.com/GoogleMapApiTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GoogleMapApiTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/GoogleMapApiTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GoogleMapApiTips"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
