--- a/app/views/welcome/graphic.html.erb
+++ b/app/views/welcome/graphic.html.erb
@@ -14,6 +14,8 @@
 </div>
 <div id="firstColumn">
 
+  <div class="head1"> Graphic Design</div>
+  <div class="para">
   We provide services in graphic design, web page design and in photo editing.
 
   Graphic design
@@ -29,7 +31,7 @@
   Photo Editing
 
   It is the process of manipulating a digital photo. Our services include background removal, photo enhancement, photo Editing etc..
-
+         </div>
 
   <script type="text/javascript"><!--
   google_ad_client = "ca-pub-1582243133898514";
@@ -47,23 +49,17 @@
 
 <div id="lastColumn">
 
-  <p> Services </p>
-
-  ruby on rails
-  web design
-  internet marketing
+  <div class="head2"> Portfolio</div>
 
 
-  portfolio
+  portfolio  pictures
+
+  <div class="head2"> Design Tips</div>
 
 
-  pictures
-
-  --------------------
 
 
-  Graphic design blog
-
+  <!--<script src="http://feeds.feedburner.com/GraphicWorksTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GraphicWorksTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/GraphicWorksTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GraphicWorksTips"></a><br/>Powered by FeedBurner</p> </noscript>
 
 
