--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,29 +10,26 @@
   </ul>
 </div>
 <div id="firstColumn">
-
-
-  <h1> who we are</h1>
-
-
-  <p> We are small firm providing web solutions. concentrated on Ruby on rails for server side script.We can do services like Website creation, Web 2.0 User Interface, Graphic works for print media etc..</p>
-
-  <h1>  our motto </h1>
-
-  We believe in making a positive impact on the environment, consumers, employees, communities, stakeholders and all other members of the public sphere by our activities. we wish to promote  public interest by encouraging community growth and development. we wish to voluntarily eliminating practices that harm the public sphere and deliberately include public interest into corporate decision-making by honoring people, planet, and profit.
-
-
-  <script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a><br/>Powered by FeedBurner</p> </noscript>
-
+  <div class="head1"> Who we are</div>
+  <div class="para"> We are small firm providing web solutions. concentrated on Ruby on rails for server side script.We can do services like Website creation, Web 2.0 User Interface, Graphic works for print media etc..</div>
+  <div class="head1">  Our motto </div>
+  <div class="para">We believe in making a positive impact on the environment, consumers, employees, communities, stakeholders and all other members of the public sphere by our activities. we wish to promote  public interest by encouraging community growth and development. we wish to voluntarily eliminating practices that harm the public sphere and deliberately include public interest into corporate decision-making by honoring people, planet, and profit.</div>
 </div>
+
+<!--<div id="lastColumn">-->
+
 
 <div id="lastColumn">
 
-           <p> Services </p>
 
 
-
-    <script src="http://feeds.feedburner.com/blogspot/mqnLb?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/mqnLb"></a><br/>Powered by FeedBurner</p> </noscript>
+  <div class="head2"> Testimonials</div>
+  <!--<script src="http://feeds.feedburner.com/blogspot/mqnLb?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/mqnLb"></a><br/>Powered by FeedBurner</p> </noscript>-->
+  <script src="http://feeds.feedburner.com/blogspot/mqnLb?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/mqnLb"></a><br/>Powered by FeedBurner</p> </noscript>
+  <div class="head2"> Suggestions</div>
+  <!--<script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a><br/>Powered by FeedBurner</p> </noscript>-->
+  <!--<script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a><br/>Powered by FeedBurner</p> </noscript>--->
+  <script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a></p> </noscript>
 
 
 
