--- a/app/views/welcome/marketing.html.erb
+++ b/app/views/welcome/marketing.html.erb
@@ -13,6 +13,10 @@
   </ul>
 </div>
 <div id="firstColumn">
+
+  <div class="head1"> Internet Marketing</div>
+
+  <div class="para">
   We provide services for Search engine optimization( SEO ), Search engine marketing ( SEM ) ,Social media marketing( SMM ), Affiliate Marketing and keyword research
 
 
@@ -38,6 +42,7 @@
   Affiliate Marketing
 
   Is a revenue sharing venture between a website owner and an online merchant. The website owner will place advertisements on his websites for a share of the profits. google AdSense is a example for Affiliate marketing.
+   </div>
 
   <script type="text/javascript"><!--
   google_ad_client = "ca-pub-1582243133898514";
@@ -55,21 +60,16 @@
 
 <div id="lastColumn">
 
-  <p> Services </p>
-
-  ruby on rails
-  Graphic design
-  web development
+  <div class="head2"> Our strategy</div>
 
 
-  Our strategy
+
 
   https://docs.google.com/a/klairvoyant.com/document/d/1kga42CVUVERMkEI68a6iHgE9lULPZfEoOW3Zre0QQdY/edit?hl=en&pli=1
 
-  ---------------------------------------------------------
+  <div class="head2"> SEO Tips</div>
 
-  SEo Tips
-
+  <!--<script src="http://feeds.feedburner.com/blogspot/fqUTL?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/fqUTL"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/blogspot/fqUTL?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/fqUTL"></a><br/>Powered by FeedBurner</p> </noscript>
 
 
