--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -13,31 +13,27 @@
   </ul>
 </div>
 <div id="firstColumn">
+  <div class="head1"> Ruby On Rails</div>
 
-  We provide web solutions using ruby on rails and  related web technologies like jQuery, ERB, HAML, SASS, Blueprint, HTML 5, Ajax, JSON,CSS,YAML and MySQL.
+  <div class="para">
+  We provide web solutions using ruby on rails and  related web technologies like jQuery,Compass, Blueprint,and MySQL.
 
-  Application API
+  <br/>
 
-  We provide services using 1) Google Map API, 2) Facebook API
-
-  Share code, Cloud share and CMS
-
-  Provide service to implement applications in Heroku, GitHub, pivotalTracker and using  Radiant CMS.
+  We also provide services using Google Map API, Heroku, GitHub, and pivotalTracker.
+    </div>
 </div>
 
 <div id="lastColumn">
 
-  services
 
-  graphic design,
-  web design
-  internet marketing
-
-  portfolio
+  <div class="head2"> portfolio</div>
 
   http://www.behance.net/klairvoyant/frame
+  <div class="head2"> Rails Tips</div>
 
    <!--<script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
+  <!--<script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
