--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -16,28 +16,27 @@
 
 
 
+  <div class="head1"> Our Services</div>
+  <div class="para">
 
-  <p> Our service concentrated on web and it's related technologies. we love open source philosophy. we use Linux and other "Free" softwares for the development process. In case of works which are not in open source we outsource it with others.
+    <br/>
+    Our service concentrated on web and it's related technologies. we love open source philosophy. we use Linux and other "Free" softwares for the development process. <br/><br/>
 
-    For server side scripting we using ruby on rails and it's related technologies. other service include usage of Google map API, Facebook Development, Heroku,site design, slicing,  web master services.Our graphic works include design of brochure, Flayer , Business card, Banner,Mock ups , etc..
+    For server side scripting we using ruby on rails. other service include usage of Google map API, Facebook Development, Heroku,site design, slicing,  web master services.Our graphic works include design of brochure, Flayer , Business card, Banner,Mock ups , etc..<br/><br/>
 
-    Finally in internet marketing our service include  Search Engine optimization( SEO ) ,Search Engine Marketing ( SEM ), Social Media Marketing ( SMM ) and keyword research.
-  </p>
+    Finally in internet marketing our service include  Search Engine optimization(SEO), Search Engine Marketing ( SEM ), Social Media Marketing ( SMM ) and keyword research.
+  </div>
 
 
-  <h1> Any Questions ? </h1>
 
-  Here we wish to answer your web questions freely. so feels free to ask any questions, we ready to answer. we publish it in the below section "Answers"
-  form
-
-  <script src="http://feeds.feedburner.com/KlairvoyantsBlog?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/KlairvoyantsBlog"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
 
 <div id="lastColumn">
 
-  <p> Services </p>
 
+
+  <div class="head2"> Payment</div>
   <div id="payment">
 
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -55,15 +54,13 @@
       <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
       <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
     </form>
-
-
   </div>
 
-  Answers yahoo
 
-  Videos
 
-  <a href="http://www.youtube.com/watch?v=Gc4HGQHgeFE&list=PL26FC5123C60444A5&context=C4093b16ADvjVQa1PpcFPgJ5mhQrRoX3bP_qF4ldIRkZWC4nz0QKs%3D">Videos</a>
 
+  <div class="head2"> Question & Answers</div>
+
+     <script src="http://feeds.feedburner.com/KlairvoyantsBlog?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/KlairvoyantsBlog"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
