--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Klairvoyantsite</title>
   <%= stylesheet_link_tag    "application" %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Tangerine" %>
+  <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Varela+Round" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <!-- Google plus -->
