--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,33 +16,16 @@
 <div id="headSection">
   Klairvoyant  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Infosolutions
 
-
-     <!--<div id="navigation">
-       <div id="navigationspace">
-                 &nbsp;
-       </div>
-
-       <ul class="dropdown">
-         <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
-         <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>   </li>
-         <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
-        </ul>
-     </div>
-         -->
 </div>
 
 <div id="leftside">
-    &nbsp;
+    <!--&nbsp;-->
 </div>
-
-
-
-
 
 <%= yield %>
 
 <div id="rightside">
-  &nbsp;
+  <!--&nbsp;-->
 </div>
 
 <div id="footerSection">
@@ -65,9 +48,6 @@
     -->
     <script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
     <a href="skype:klairvoyantinfo?chat"><img src="http://mystatus.skype.com/mediumicon/klairvoyantinfo" style="border: none;" width="26" height="26" alt="My status" /></a>
-
-
-
   </div>
 
   <div id='googleplus'>
