--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -1,40 +1,72 @@
 <div id="navigation">
-  <div id="navigationspace2">
+  <div id="navigationspace">
     &nbsp;
   </div>
 
-  <ul id="menu2" class="dropdown">
+  <ul id="menu" class="dropdown">
     <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
-    <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>">Rails</a>   </li>
-    <li><a href="<%= url_for(:action => 'design', :controller => 'welcome') %>">Web</a>   </li>
-    <li><a href="<%= url_for(:action => 'graphic', :controller => 'welcome') %>">Graphic</a>   </li>
-    <li><a href="<%= url_for(:action => 'marketing', :controller => 'welcome') %>">Marketing</a>   </li>
-    <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
+    <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>   </li>
+     <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
   </ul>
 </div>
 <div id="firstColumn">
   <div class="head1"> Ruby On Rails</div>
 
   <div class="para">
-  We provide web solutions using ruby on rails and  related web technologies like jQuery,Compass, Blueprint,and MySQL.
+    We provide web solutions using ruby on rails and related web technologies like jQuery, Compass, Blueprint, HAML, SASS, MySQL and RSpec.
+    <br/> <br/>
+    <div class="subHead"> Application API </div><br/>
 
-  <br/>
+    We provide services using 1) Google Map API, 2) Amazon-web-services API, 3) Paypal-integration API, 4) Garmin Communicator Plugin API.
 
-  We also provide services using Google Map API, Heroku, GitHub, and pivotalTracker.
-    </div>
-</div>
+    <br/><br/>
+
+    <div class="subHead"> Share code, Cloud share</div>
+    <br/>
+
+    Provide service to implement applications in Heroku, GitHub, and pivotalTracker
+
+
+  </div>
+
+  <div class="head1"> Site Development</div>
+
+  <div class="para">
+
+   Our Services include Web Master services, Site development, Domain registration, Web hosting, Slicing, Content development, Implementing SEO features, Blog links, Affiliation links, SMM features like share buttons, like buttons, Follow me buttons, YouTube, Google Maps, and chatting components.
+   We also take care for pages being "W3C "valid, and "table less"
+
+  </div>
+
+  <div class="head1"> Graphic Design</div>
+  <div class="para">
+
+    Our services include creation of Logo, Brochure, Flyer, Business card, Banner, Mockups, Background removal, Photo enhancement, Photo editing, etc..
+
+  </div>
+
+
+  </div>
 
 <div id="lastColumn">
 
 
-  <div class="head2"> portfolio</div>
+  <div class="head2"> Portfolio</div>
 
-  http://www.behance.net/klairvoyant/frame
+  <script src="http://feeds.feedburner.com/railsportfolio?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/railsportfolio"></a><br/>Powered by FeedBurner</p> </noscript>
+
   <div class="head2"> Rails Tips</div>
 
-   <!--<script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
-  <!--<script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>-->
   <script src="http://feeds.feedburner.com/RubyOnRailsTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/RubyOnRailsTips"></a><br/>Powered by FeedBurner</p> </noscript>
+
+  <div class="head2"> Web development Tips</div>
+
+  <script src="http://feeds.feedburner.com/blogspot/GAHiE?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/GAHiE"></a><br/>Powered by FeedBurner</p> </noscript>
+
+  <div class="head2"> Google Map API Tips</div>
+
+  <script src="http://feeds.feedburner.com/GoogleMapApiTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GoogleMapApiTips"></a><br/>Powered by FeedBurner</p> </noscript>
+
 
 </div>
 
