--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,30 +1,24 @@
 <div id="navigation">
-  <div id="navigationspace2">
+  <div id="navigationspace">
     &nbsp;
   </div>
 
-  <ul id="menu2" class="dropdown">
+  <ul id="menu" class="dropdown">
     <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
-    <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>">Rails</a>   </li>
-    <li><a href="<%= url_for(:action => 'design', :controller => 'welcome') %>">Development</a>   </li>
-    <li><a href="<%= url_for(:action => 'graphic', :controller => 'welcome') %>">Design</a>   </li>
-    <li><a href="<%= url_for(:action => 'marketing', :controller => 'welcome') %>">Marketing</a>   </li>
+    <li><a href="<%= url_for(:action => 'rails', :controller => 'welcome') %>">Development</a>   </li>
     <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
   </ul>
 </div>
 <div id="firstColumn">
-
-
-
-  <div class="head1"> Our Services</div>
-  <div class="para">
+    <div class="head1"> Our Services</div>
+    <div class="para">
 
     <br/>
     Our service concentrated on web and it's related technologies. we love open source philosophy. we use Linux and other "Free" softwares for the development process. <br/><br/>
 
-    For server side scripting we using ruby on rails. other service include usage of Google map API, Facebook Development, Heroku,site design, slicing,  web master services.Our graphic works include design of brochure, Flayer , Business card, Banner,Mock ups , etc..<br/><br/>
+    For server side scripting we using ruby on rails. Other service include usage of Google map API, Amazon-web-services API, Paypal-integration API, Garmin Communicator Plugin API, Site design, Slicing, Web master services, Brochure, Flayer,Business card, Banner,Mock ups,etc..<br/><br/>
 
-    Finally in internet marketing our service include  Search Engine optimization(SEO), Search Engine Marketing ( SEM ), Social Media Marketing ( SMM ) and keyword research.
+
   </div>
 
 
@@ -55,9 +49,6 @@
       <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
     </form>
   </div>
-
-
-
 
   <div class="head2"> Question & Answers</div>
 
