--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -1,12 +1,3 @@
-<!-- for facebook -->
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=210932928927426";
-    fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 <div id="navigation">
   <div id="navigationspace">
     &nbsp;
@@ -18,15 +9,21 @@
     <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
   </ul>
 </div>
+
 <div id="firstColumn">
 
-  Mail us  box
+  <div class="head1"> Contact Us</div>
 
+      <%= form_tag 'sendmail',:method => :get,:id => 'contactForm' do -%>
 
+          <div class="labelText">Name</div> <%= text_field("cruncher", "name", {:value=>params[:name]})%> <br/>
+          <div class="labelText">Subject</div> <%= text_field("cruncher", "subject", {:value=>params[:subject]})%>  <br/>
+          <div class="labelText">Email</div><%= email_field("cruncher", "address", {:value=>params[:address]})%> <br/>
+          <div class="labelText">Message</div>  <%= text_area("cruncher", "bodydata",{:value=>params[:bodydata]})%> <br>
+          <%= submit_tag "Send Mail"%>
+      <% end -%>
 
-  <!-- Google Maps Element Code -->
-  <iframe frameborder=0 marginwidth=0 marginheight=0 border=0 style="border:0;margin:0;width:300px;height:250px;" src="http://www.google.com/uds/modules/elements/mapselement/iframe.html?maptype=roadmap&latlng=10.618599%2C76.036891&mlatlng=10.618599%2C76.036891&maddress1=Muttath%2C%20kottapady&maddress2=Kerala%20680505%2C%20India&mtitle=Klairvoyant%20Infosolutions&element=true" scrolling="no" allowtransparency="true"></iframe>
-
+  <div class="notice2"><%= notice %></div>
 
 </div>
 
@@ -34,14 +31,10 @@
 
   <div class="head2"> Address</div>
 
-  Post Box  No: 709, East Fort, Thrissur, Kerala, India 680005
+  <div class="contactpara">Post Box  No: 709, <br/> East Fort, Thrissur, <br/>Kerala, India 680005 </div>
 
-  <div class="head2"> Face Book</div>
-  <!-- Facebook Badge START <a href="https://www.facebook.com/klairvoyant.info" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Klairvoyant Infosolutions">Klairvoyant Infosolutions</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;|&nbsp;</span><a href="http://www.facebook.com/business/dashboard/" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Make your own badge!">Promote Your Page Too</a><br/><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
-
-  <div class="fb-like-box" data-href="https://www.facebook.com/klairvoyant.info" data-width="292" data-show-faces="true" data-stream="true" data-header="true"></div>
-
-
+  <div class="head2"> Location</div>
+  <iframe frameborder=0 marginwidth=0 marginheight=0 border=0 style="border:0;margin:0;width:300px;height:250px;" src="http://www.google.com/uds/modules/elements/mapselement/iframe.html?maptype=roadmap&latlng=10.618599%2C76.036891&mlatlng=10.618599%2C76.036891&maddress1=Muttath%2C%20kottapady&maddress2=Kerala%20680505%2C%20India&mtitle=Klairvoyant%20Infosolutions&element=true" scrolling="no" allowtransparency="true"></iframe>
 
 </div>
 
