--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
 
   </script>
   <meta name="msvalidate.01" content="5BDA6BF29038F3C9A23C3B2F6E8D5A37" />
+  <meta name="google-site-verification" content="MmGP1-Zg6NeDEHBen88L_pB5YUqKzgt_gThR2w01FH4" />
 </head>
 <body>
 
