--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Klairvoyantsite</title>
+  <title>Klairvoyant Infosolutions:- we provide web solutions</title>
   <%= stylesheet_link_tag    "application" %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Tangerine" %>
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Varela+Round" %>
