--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= stylesheet_link_tag    "http://fonts.googleapis.com/css?family=Varela+Round" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link rel="shortcut icon" href="/favicon.ico" / >
+  <link rel="shortcut icon" href="favicon.ico" />
   <!-- Google plus -->
   <link href="https://plus.google.com/105958712545412704818" rel="publisher" />
   <script type="text/javascript">
