--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,12 +47,14 @@
 
 <div id="footerSection">
   <div id='translate'>
+
     <!-- Google Translate Element -->
-    <div id="google_translate_element" style="display:block"></div><script>
+    <div id="google_translate_element" style="display:none"></div><script>
       function googleTranslateElementInit() {
           new google.translate.TranslateElement({pageLanguage: "en"}, "google_translate_element");
       };</script>
     <script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
   </div>
 
   <div id="time">
