--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -1,3 +1,21 @@
+<!-- Google Code for local enquiry Conversion Page -->
+<script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 984898128;
+    var google_conversion_language = "en";
+    var google_conversion_format = "2";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "xj3OCMj71QMQ0LTR1QM";
+    var google_conversion_value = 0;
+    /* ]]> */
+</script>
+<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+  <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/984898128/?label=xj3OCMj71QMQ0LTR1QM&amp;guid=ON&amp;script=0"/>
+  </div>
+</noscript>
 <div id="navigation">
   <div id="navigationspace">
     &nbsp;
