--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
   <link rel="shortcut icon" href="favicon.ico" />
   <!-- Google plus -->
-  <link href="https://plus.google.com/105958712545412704818" rel="publisher" />
+  <link href="https://plus.google.com/105958712545412704818" rel="publisher"/>
   <script type="text/javascript">
 
       var _gaq = _gaq || [];
@@ -26,6 +26,11 @@
   <meta name="msvalidate.01" content="5BDA6BF29038F3C9A23C3B2F6E8D5A37" />
   <meta name="google-site-verification" content="MmGP1-Zg6NeDEHBen88L_pB5YUqKzgt_gThR2w01FH4" />
   <meta name="google-site-verification" content="Ff05KKu10VcvaFVeY9OnGJw6paHafaM2R0qHvTO8bbI" />
+
+  <meta name="keywords" content="Ruby on Rails, rails development, google map api, web solutions, web site development" />
+  <meta name="description" content="Provide ruby on rails web solutions, Google map integration, graphic and web design works etc.." />
+  <meta name="author" content="M.V John" />
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
 </head>
 <body>
@@ -74,7 +79,7 @@
   <a href="https://plus.google.com/105958712545412704818?prsrc=3" style="text-decoration:none;"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="" style="border:0;width:32px;height:32px;"/></a>
   </div>
   <div id="facebook">
-    <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
+    <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" alt="facebook" style="border: 0px;" /></a><!-- Facebook Badge END -->
   </div>
     <div id='linkedin'>
    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
@@ -85,6 +90,33 @@
     <a href="https://twitter.com/klairvoyantinfo" class="twitter-follow-button" data-show-count="false" data-size="large" data-show-screen-name="false">Follow @klairvoyantinfo</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   </div>
+  <div id="quantcast">
+    <!-- Quantcast Tag -->
+    <script type="text/javascript">
+        var _qevents = _qevents || [];
+
+        (function() {
+            var elem = document.createElement('script');
+            elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
+            elem.async = true;
+            elem.type = "text/javascript";
+            var scpt = document.getElementsByTagName('script')[0];
+            scpt.parentNode.insertBefore(elem, scpt);
+        })();
+
+        _qevents.push({
+            qacct:"p-caYTTGdSPRTjk"
+        });
+    </script>
+
+    <noscript>
+      <div style="display:none;">
+        <img src="//pixel.quantserve.com/pixel/p-caYTTGdSPRTjk.gif" border="0" height="1" width="1" alt="Quantcast"/>
+      </div>
+    </noscript>
+    <!-- End Quantcast tag -->
+
+
   <div id="addThis">
 
     <!-- AddThis Button BEGIN -->
@@ -98,6 +130,9 @@
     </div>
     <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=klairvoyant"></script>
     <!-- AddThis Button END -->
+  </div>
+
+
   </div>
 
 </div>
