--- a/app/views/welcome/rails.html.erb
+++ b/app/views/welcome/rails.html.erb
@@ -1,3 +1,4 @@
+
 <!-- Google Code for local enquiry Conversion Page -->
 <script type="text/javascript">
     /* <![CDATA[ */
@@ -71,7 +72,7 @@
 
   <div class="head2"> Portfolio</div>
 
-  <script src="http://feeds.feedburner.com/railsportfolio?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/railsportfolio"></a><br/>Powered by FeedBurner</p> </noscript>
+    <script src="http://feeds.feedburner.com/railsportfolio?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/railsportfolio"></a><br/>Powered by FeedBurner</p> </noscript>
 
   <div class="head2"> Rails Tips</div>
 
@@ -85,6 +86,8 @@
 
   <script src="http://feeds.feedburner.com/GoogleMapApiTips?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/GoogleMapApiTips"></a><br/>Powered by FeedBurner</p> </noscript>
 
+  <div class="head2"> Seo Tips</div>
+  <script src="http://feeds.feedburner.com/blogspot/fqUTL?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/fqUTL"></a><br/>Powered by FeedBurner</p> </noscript>
 
 </div>
 
