--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <meta name="google-site-verification" content="MmGP1-Zg6NeDEHBen88L_pB5YUqKzgt_gThR2w01FH4" />
   <meta name="google-site-verification" content="Ff05KKu10VcvaFVeY9OnGJw6paHafaM2R0qHvTO8bbI" />
 
-  <meta name="keywords" content="Ruby on Rails, rails development, google map api, web solutions, web site development" />
+  <meta name="keywords" content="Ruby on Rails, rails development, google map api, web solutions, web site development, thrissur, chavakkad, kunnamkulam, guruvayoor" />
   <meta name="description" content="Provide ruby on rails web solutions, Google map integration, graphic and web design works etc.." />
   <meta name="author" content="M.V John" />
   <meta http-equiv="content-type" content="text/html;charset=UTF-8">
