--- a/app/views/welcome/contact.html.erb
+++ b/app/views/welcome/contact.html.erb
@@ -31,7 +31,14 @@
 
   <div class="head2"> Address</div>
 
-  <div class="contactpara">Post Box  No: 709, <br/> East Fort, Thrissur, <br/>Kerala, India 680005 </div>
+  <div class="contactpara">Post Box  No: 709, <br/> East Fort, Thrissur, <br/>Kerala, India 680005  </div>
+
+  <div class="head2"> E-mail</div>
+  <div class="contactpara">
+   contact@klairvoyant.com
+  </div>
+
+
 
   <div class="head2"> Location</div>
   <iframe frameborder=0 marginwidth=0 marginheight=0 border=0 style="border:0;margin:0;width:300px;height:250px;" src="http://www.google.com/uds/modules/elements/mapselement/iframe.html?maptype=roadmap&latlng=10.618599%2C76.036891&mlatlng=10.618599%2C76.036891&maddress1=Muttath%2C%20kottapady&maddress2=Kerala%20680505%2C%20India&mtitle=Klairvoyant%20Infosolutions&element=true" scrolling="no" allowtransparency="true"></iframe>
