--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,7 @@
   <div id='googleplus'>
   <!-- google plus -->
   <!--<a href="https://plus.google.com/105958712545412704818?prsrc=3" style="text-decoration:none;"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="" style="border:0;width:32px;height:32px;"/></a>-->
-    <a href="https://plus.google.com/105958712545412704818"  rel="publisher">Find us on Google+</a>
+    <a href="https://plus.google.com/105958712545412704818"  rel="publisher"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" alt="" style="border:0;width:32px;height:32px;"/></a>
   </div>
   <div id="facebook">
     <!-- Facebook Badge START --><a href="https://www.facebook.com/klairvoyant.info" target="_TOP" title="Klairvoyant Infosolutions"><img src="https://badge.facebook.com/badge/176523462377124.2170.36631937.png" alt="facebook" style="border: 0px;" /></a><!-- Facebook Badge END -->
