--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -8,28 +8,40 @@
 @import "blueprint/buttons";
 
 
-#headSection {
-  @include column(24,true);
-  text-align: center;
-  background-image: url("klairvoyantlogo.jpg");
-  background-position: center top;
-  background-repeat: no-repeat;
-  font-family: 'Tangerine', serif;
-  font-size: 100px;
-  color: #4cb4e9;
+//#headSection {
+//  @include column(24,true);
+//  text-align: center;
+//  background-image: url("klairvoyantlogo.jpg");
+//  background-position: center top;
+//  background-repeat: no-repeat;
+//  font-family: 'Tangerine', serif;
+//  font-size: 100px;
+//  color: #4cb4e9;
+//}
+.image_size {
+  width: 100%;    //700 *525
+  height:300px;//480
+}
+.head_colour {
+  color: #0198dd;
+  font-size: 25px;
+  font-weight: bolder;
+  background-color: black;
+  position: relative;
+  bottom:10px;
+  padding-left: 5px;
+
+}
+.pushFromTop {
+  position: relative;
+  top: 10px;
 }
 #firstColumn {
-  @include column(13);
+  @include column(20);
   margin-top: 20px;
   background-image: url("pageback.jpg");
 }
-#lastColumn {
-  @include column(6);
-  border-style: solid;
-  border-width: 1px;
-  border-color: #55b9eb;
-  margin-top: 20px;
-}
+
 #addThis {
   @include column(8,true);
   padding-bottom: 30px;
@@ -71,9 +83,9 @@
   padding-top: 30px;
 }
 
-#testimonials {
-  @include column(8,true);
-}
+//#testimonials {
+//  @include column(8,true);
+//}
 
 #footerSection {
   @include column(24, true);
@@ -101,32 +113,32 @@ div.feedburnerFeedBlock ul {
 }
 /*for feed burner end */
 
-#navigationspace {
-  @include column(14);
-  background-color:#55b9eb;
-}
+//#navigationspace {
+//  @include column(14);
+//  //background-color:#55b9eb;
+//}
 #navigation {
-  font-size: 20px;
-  font-family: sans-serif;
+  //font-size: 20px;
+  //font-family: sans-serif;
   @include column(20,true);
-  border-style: solid;
-  border-width: 1px;
-  border-color:#55b9eb;
-  margin-bottom: 20px;
+  //border-style: solid;
+  //border-width: 1px;
+  //border-color:#55b9eb;
+  //margin-bottom: 20px;
 }
-ul.dropdown {
-  @include horizontal-list(25px);
-  a{
-    text-decoration: none;
-    color: #55b9eb;
-    &:hover {
-      color: #1574c4;
-    }
-  }
-}
-#menu1 {
-  @include column(10,true);
-}
+//ul.dropdown {
+//  @include horizontal-list(25px);
+//  a{
+//    text-decoration: none;
+//    color: #55b9eb;
+//    &:hover {
+//      color: #1574c4;
+//    }
+//  }
+//}
+//#menu1 {
+//  @include column(10,true);
+//}
 #leftside {
   @include column(2);
   height: 450px;
