--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,77 @@
-<div id="navigation">
-  <div id="navigationspace">
-    &nbsp;
-  </div>
 
-  <ul id="menu1" class="dropdown">
-    <li><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a>    </li>
-    <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a>   </li>
-    <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a>       </li>
-  </ul>
-</div>
+      <div class="span12">
+          <div class="navbar navbar-inverse">
+            <div class="navbar-inner">
+              <span class="brand"> <%= image_tag("logo.png") %><span class="head_colour">Klairvoyant Infosolutions</span></span>
+              <ul class="nav pushFromTop">
+                <li class="active"><a href="<%= url_for(:action => 'index', :controller => 'welcome') %>">Home</a></li>
+                <li><a href="<%= url_for(:action => 'services', :controller => 'welcome') %>">Services</a></li>
+                <li><a href="<%= url_for(:action => 'contact', :controller => 'welcome') %>">Contact</a></li>
+              </ul>
+            </div>
+          </div>
+      </div>
+      <div class="span12">
+
+        <div id="myCarousel" class="carousel slide">
+
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="active item">
+              <%= image_tag("poo2.jpg",:class =>"image_size") %>
+              <div class="container">
+                <div class="carousel-caption">
+
+                  <div class='row-fluid'>
+                    <div class="span12">
+
+                      <h1> map</h1>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <%= image_tag("poo1.jpg",:class =>"image_size") %>
+              <div class="container">
+                <div class="carousel-caption">
+
+                  <div class='row-fluid'>
+                    <div class="span12">
+
+                      <h1> ecommerce</h1>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <%= image_tag("poo1.jpg",:class =>"image_size") %>
+              <div class="container">
+                <div class="carousel-caption">
+
+                  <div class='row-fluid'>
+                    <div class="span12">
+
+                      <h1> ecommerce</h1>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+            <a class="carousel-control left" href= "#myCarousel"  data-slide="prev">&lsaquo;</a>
+            <a class="carousel-control right" href= "#myCarousel"  data-slide="next">&rsaquo;</a>
+
+
+        </div>
+
+      </div>
+
+
 <div id="firstColumn">
    <div class="head1"> Who we are</div>
   <div class="para"> We are small firm providing web solutions. concentrated on Ruby on rails for server side script.We can do services like Website creation, Web 2.0 User Interface, Graphic works for print media etc..</div>
@@ -16,13 +79,5 @@
   <div class="para">We believe in making a positive impact on the environment, consumers, employees, communities, stakeholders and all other members of the public sphere by our activities. we wish to promote  public interest by encouraging community growth and development. we wish to voluntarily eliminating practices that harm the public sphere and deliberately include public interest into corporate decision-making by honoring people, planet, and profit.</div>
 </div>
 
-<!--<div id="lastColumn">-->
 
 
-<div id="lastColumn">
-  <div class="head2"> Testimonials</div>
-  <script src="http://feeds.feedburner.com/blogspot/mqnLb?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/mqnLb"></a><br/>Powered by FeedBurner</p> </noscript>
-  <div class="head2"> Suggestions</div>
-  <script src="http://feeds.feedburner.com/blogspot/arlnu?format=sigpro" type="text/javascript" ></script><noscript><p>Subscribe to RSS headline updates from: <a href="http://feeds.feedburner.com/blogspot/arlnu"></a></p> </noscript>
-
-</div>
